<resources>
    <string name="app_name">Schedule Mobile</string>

    <string name="action_settings">Settings</string>
    <string name="parameter_group">Group</string>
    <string name="parameter_day">Day</string>
    <string name="parameter_hours">Hours</string>
    <string name="parameter_lecture">Lecture</string>
    <string name="parameter_teacher">Teacher</string>
    <string name="parameter_room">Room</string>
    <string name="edit_parameters_btn">Edit parameters</string>
    <string name="no_data">No data to show</string>
    <string name="button_find">Find</string>
</resources>
